add author back in

--- a/mainnet/2025-07-13-budget-2025/EMI/EMI-0001-25-Catalyst/EMI-0001-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EMI/EMI-0001-25-Catalyst/EMI-0001-25.jsonld.md
@@ -1,14 +1,18 @@
 # Title
 
-Withdraw ₳592,780 for Beyond Minimum Viable Governance: Iteratively Improvin....
+Withdraw ₳69,459,000 for Catalyst 2025 Proposal by Input Output: Advancing De...
 
 # Abstract
 
-This treasury withdrawal funds **Beyond Minimum Viable Governance: Iteratively Improving on Cardano Voltaire** which will provide the following services:
+This treasury withdrawal funds **Catalyst 2025 Proposal by Input Output: Advancing Decentralised Community Innovation Funding & Infrastructure** which will provide the following services:
 
-This initiative will establish a robust framework for evaluating and enhancing Cardano's governance system. We will identify and benchmark key governance metrics to assess the health, performance, and overall impact of our decentralized decision-making processes. The resulting 'State of Governance' report will provide a structured evaluation of participation, track vital Key Performance Indicators (KPIs), map the evolving governance ecosystem, and pinpoint specific areas for improvement.
+This proposal lays out a coordinated plan to provide reliable ecosystem funding and to future-proof Catalyst through a set of transformative upgrades that supports the Cardano 2025 Roadmap and community-validated priorities across three core workstreams:
 
-To ensure our findings are grounded in real-world experience, we will engage the Cardano community through various channels. These include virtual workshops, targeted surveys, and in-depth user interviews. By actively gathering and synthesizing community insights, we will gain a comprehensive understanding of the current state of governance. This will allow us to formulate actionable recommendations and pave the way for post-MVG (Minimum Viable Governance) evolution. Where appropriate, these recommendations will be developed into initial drafts of Cardano Problem Statements (CPSs) or Cardano Improvement Proposals (CIPs), directly reflecting the community's vision for a more robust and effective governance future.
+1. **Catalyst Interface Design and Development for Diversified Funding Streams**
+
+2. **Production-Grade Decentralised Catalyst Infrastructure via Hermes**
+
+3. **F14-F16 Catalyst Funding Rounds, Retroactive Public Goods Funding (RetroPGF), Fund Operations**
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
@@ -18,47 +22,33 @@ This treasury withdrawal funds one of 39 proposals to give effect to the approve
 
 This proposal aims to solve the following problem:
 
-Cardano stands at the forefront of decentralized governance innovation. Yet, we face a critical challenge: the absence of transparent, data-backed frameworks to evaluate our governance's effectiveness, pinpoint obstacles, and drive impactful improvements. Without these structured processes, our governance discourse risks becoming reactive and fragmented. Potential risks may slip through the cracks, and decision-makers could lack the vital insights needed to refine our governance mechanisms. To truly evolve beyond Minimum Viable Governance (MVG) and unlock Cardano's full potential, we must establish a robust, data-driven foundation for continuous improvement.
+As participation increases and the demands of funding and governance become more complex, this proposal aims to address five key challenges necessary for Cardano's continued growth, competitiveness, and decentralization:
+
+1. **Operational inefficiencies:** Catalyst currently depends on substantial manual oversight and coordination across its funding cycles. Without targeted investment in tooling and automation, operational overhead will remain high. Streamlining systems now lays the groundwork for a leaner, more cost-effective operation once this development roadmap concludes in 2026.
+
+2. **Low voter engagement:** While Catalyst sees higher voter engagement than most blockchain ecosystems, participation remains disproportionately low relative to the total ADA in circulation. This imbalance raises questions about how representative funding decisions truly are of the broader Cardano community.
+
+3. **Software limitations:** Fragmented tools and inconsistent user workflows create friction across the entire Catalyst journey - from proposal to review to vote to ongoing project-funding administration and transparent outcomes. This complexity deters newcomers and reduces the system's inclusivity and scalability.
+
+4. **Voting power concentration:** A small number of high-stake wallets have the potential to dominate decision-making, leading to concerns around fairness and influence. Planned reforms like Quadratic Voting and DRep delegation are essential steps toward more equitable governance.
+
+5. **Catalyst's early-stage focus:** While Catalyst excels at incubating early-stage ideas and pilot programs, its role is sometimes mistaken for a long-term funding source. Clarifying Catalyst as a launchpad for experimentation and industry adoption, while encouraging mature projects not focused on partnerships to seek alternative treasury channels---will help align expectations and optimize resource allocation
 
 # Rationale
 
 ### Project Solution
 
-Imagine a Cardano where governance evolves continuously, driven by data and community insights. We will forge that future by moving beyond Minimum Viable Governance (MVG) to craft a dynamic, adaptable system with a clear, cost-effective process to pinpoint the real challenges faced by those who participate in governance. By putting this process into action, we will deliver transparent, insightful findings and expert analysis. Where needed, these insights will be translated into concrete proposals (CIPs or CPSs) reflecting community consensus. This initiative will kickstart ongoing governance optimization, empowering the community to actively monitor and address critical risks, ensuring Cardano remains a leader in decentralized decision-making.
+This proposal addresses the need for reliable ecosystem funding to support hundreds of Cardano builders and startups, alongside upgrading the core structural and operational limitations facing Catalyst, laying the foundation for its long-term sustainability and decentralization. Through these three interlinked workstreams: Catalyst Interface Development, Hermes Decentralized Infrastructure, and the execution of three Funding Rounds the return on investment for this proposal is measured in tangible, ecosystem-wide outcomes, including:
 
-* The process outputs will be published including a state of governance report with measurement methods and workshop data with analysis
+1. **For the Ecosystem:** Significant reduction in operational costs, with potential savings of up to 50% in future Catalyst cycles from 2026 onward and broader and more meaningful community participation by strengthening Cardano's decentralized innovation funding infrastructure with expanded governance functionality and funding flexibility, with support for multiple voting mechanics and the ability to participate using Cardano Native Tokens beyond ADA.
 
-* A playbook will be published with details about how to repeat the process and include lessons learned
+2. **For Cardano Developers, Entrepreneurs, and Community Builders:** Continued assurance of community-led funding, giving hundreds of community builders the confidence to plan and scale their projects, supported by a trusted, experienced, and committed Catalyst operations team. ₳61 million to be deployed across three funding rounds, including the launch of a Retroactive Public Goods Funding (RetroPGF) initiative, designed to reward high-impact contributions that have already been delivered - even if not initially funded through a Catalyst vote. The results are increased support for early stage R&D, open-source, regional, and community-led initiatives, guided by more equitable and representative voting mechanisms.
 
-* Any CPS and CIPs will be authored by this team as a milestone of this funding, but the team will be open for other interested co-authors and collaborators
-
-* Further funding would be required to move a CPS to a CIP, or to implement a CIP
-
-* This could become a repeated process if the community finds value in funding these activities annually
+3. **For End Users :** Seamless, scalable, and accessible Catalyst infrastructure delivered through unified, device-agnostic interfaces lowering barriers to participation, particularly in mobile-first regions, enabled by enhanced user interfaces and experience and production-grade decentralized infrastructure powered by Hermes, replacing legacy federated systems with peer-to-peer architecture. The sum of these parts aligns directly with Cardano's broader goals of decentralization, transparency, and system resilience. Plus the introduction of optionality between delegated and direct voting that improves governance legitimacy, with greater transparency, auditability, and resilience across funding and decision-making processes due to investment in interfaces and infrastructure.
 
 ### Vendor Profile
 
-This project will be driven by a robust coalition of experienced stakeholders dedicated to the advancement of Cardano's governance. Input Output's Voltaire team will provide core leadership, leveraging their unique role as the architects of Cardano's governance framework. As the team responsible for implementing key governance mechanisms---including the Cardano Constitution, the DRep liquid democracy model, and various on-chain and off-chain tools---we possess strong insight into their performance and optimization potential.
-
-**Key Contributions from Input Output's Voltaire Team:**
-
-* **CIP-1694 Workshops:** Designed and executed community workshops that were crucial in refining CIP-1694, which is now implemented on Cardano.
-
-* **Constitution Drafting:** Led the design and execution of the global constitution drafting workshops, which led to the 85% on-chain approval of the constitution. Michael Madoff served as the founding Chair of the Cardano Civics Committee, Danielle Stanko was the Secretary and led the Constitution Ratification Working Group, and Thomas Upfield managed the delivery of global workshop and convention polling tools during this process.
-
-* **CIP Authoring:** Demonstrated experience in creating and contributing to Cardano Improvement Proposals: Thomas Upfield is the author of CIP-119, and Danielle Stanko is the co-author of CIP-120.
-
-**Broader Coalition and Community Involvement:**
-
-This project will not solely rely on Input Output. We are building a broad coalition with active participation from:
-
-* **Constitutional Delegate Committee Members:** Ken-Erik Ølmheim, Max van Rossem, and Tevo Saks, all experienced Cardano contributors, have committed to supporting this project, bringing valuable expertise as Workshop Hosts.
-
-* **Partner Organizations:** We have secured commitments from key partner organizations, including WADA and the Intersect Constitution team, to contribute to the project's delivery.
-
-* **Active Cardano Community Members:** We will actively engage with and draw upon the diverse expertise within the broader Cardano community, ensuring a truly collaborative and inclusive approach.
-
-**This collaborative model ensures a wide range of perspectives and expertise, enhancing the project's depth and impact on Cardano's governance evolution.**
+The Catalyst Team brings over four years of experience delivering the Catalyst program. Since 2021, the Catalyst Team has processed over 3 million governance decisions, allocated ₳290 million to 2091 projects from 114 countries in 6 continents, and operated 13 successful funding rounds with a well-established governance, compliance, technology, transparency and accountability framework. Catalyst's Fund Operations team has facilitated more than 12,000 individual payments to grantees, totaling ₳180,274,235 in addition to tens of thousands more payments for incentivised community roles demonstrating its commitment to operational and financial compliance integrity. The Catalyst technical team has pioneered decentralized voting solutions, including privacy-preserving voting, quadratic voting, and the development of a prototype Hermes engine in Cardano. The team remains committed to engaging the community to enhance the program's capabilities and to furthering Cardano's ecosystem growth and development.
 
 ### Contract Management
 
@@ -124,11 +114,8 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # References
 
-- [Beyond Minimum Viable Governance Pitch Deck (PDF)](ipfs://bafybeihsjaycyujaqxpthruafmbiosckufka72zebc6d2ob2tiedjlba7e)
-- [CIP-1694 concludes with "Other ideas/ Open questions" via CIPs Github Repository](https://github.com/cardano-foundation/CIPs/tree/master/CIP-1694#other-ideas--open-questions)
-- [The Constitution drafting process documented Future Governance Workstreams](ipfs://bafkreih2ks72pmhsxteulmztt4fbvtanmtnwjktmem3orloblmvkntv55q)
-- [The Constitution Ratification governance action includes the intent to host future governance workshops](https://gov.tools/outcomes/governance_actions/8c653ee5c9800e6d31e79b5a7f7d4400c81d44717ad4db633dc18d4c07e4a4fd#0)
-- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d192)
+- [Input Output Catalyst Innovation 2025 Budget Proposal v1 (PDF)](ipfs://bafybeifpic3ufrheqvhdoxjzafqn2viqfw5argebz4foi6ew7ecrhhtzty)
+- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d244)
 - [Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
@@ -143,6 +130,6 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
   "witness": {
     "witnessAlgorithm": "ed25519",
     "publicKey": "05568f86955e65c1a59df5ac1985449b167c3828dccd00b3da9df36a1cf1c743",
-    "signature": "084a2ee9a48d5b65e096a3737f2a340c24801c6a78060d38a2169eecd219aa89cac4688abec8682e802358ed30b08daeefdefd251ff36812dcae67b609c8bc0d"
+    "signature": "d14946737c0a2ba8723495521403142f57bc3bb82e14c1cb96fb08edb2ae4a5742b0508bd9e8ebab85f4333320d95211d8ae43c71797907c0c5a8b39d6bd1d01"
   }
 }
